--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:mem:tourismsales
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= create
+spring.jpa.defer-datasource-initialization=true
 
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-ui
